tests/hevm/pass/state_machine/state_machine.act
contract StateMachine

constructor
interface constructor()

iff

  CALLVALUE == 0

creates
  uint256 x := 0

invariants
    x <= 2

transition f
interface f()

iff

  x == 0
  CALLVALUE == 0

storage
    x := 1

transition g
interface g()

iff

  CALLVALUE == 0
  x == 1

  storage
    x := 2

transition h
interface h()

iff
  CALLVALUE == 0
  x == 2

  storage
    x := 0
