tests/hevm/fail/redundant/redundant.act
contract A

constructor
interface constructor()

iff

  CALLVALUE == 0

creates

  uint x := 0

transition f
interface f()

iff

  CALLVALUE == 0
  x == 1

storage

  x := 2